# log2json

./: .gitignore  LogFormatTests.hs  Main.hs  Makefile  README.md  log2json.cabal
Text/: LogFormat.hs
